# glfw-starter

./: CMakeLists.txt  README.md
app/gui/: MyWindow.cpp  MyWindow.h
shaders/circle/: circle.frag.glsl  circle.vert.glsl
shaders/vertex/: vertex.frag.glsl  vertex.vert.glsl
src/: main.cpp
src/graphics/: Shader.cpp  Shader.h  Window.cpp  Window.h
src/gui/: MyWindow.h
src/math/point/: Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h
src/math/shapes/: Arc.cpp  Arc.h
src/math/spline/: Spline.cpp  Spline.h
src/math/vector/: Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
src/window/: Window.cpp  Window.h
